[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "bee-taxonomy"
version = "0.0.15"
authors = [
  { name="David Blanco Bautista", email="davidoff.d777@gmail.com" },
]
description = "A library for taxonomy management."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]
dependencies = ["googlesearch-python==1.3.0",
                "python-dotenv==1.2.2",
                "langchain-community==0.4.1",
                "langchain-huggingface==1.2.1",
                "openai==2.26.0",
                "chromadb==1.5.5",
                "langchain-openai==1.1.11"
               ]
build-backend = "hatchling.build"

[project.urls]
Homepage = "https://github.com/Davidoff2103/taxonomy-lib"
